# wickra-genome

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  clippy.toml  deny.toml  lychee.toml  osv-scanner.toml  repo-metadata.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: bench.yml  ci.yml  release.yml
bindings/c/: Cargo.toml  README.md  cbindgen.toml
bindings/c/src/: lib.rs
bindings/csharp/WickraGenome/: DllResolver.cs  Genome.cs  Native.cs  README.md  WickraGenome.csproj
bindings/csharp/WickraGenome.Tests/: GenomeTests.cs  GoldenTests.cs  WickraGenome.Tests.csproj
bindings/go/: README.md  genome_test.go  go.mod  golden_test.go  wickra.go
bindings/go/include/: wickra_genome.h
bindings/java/: README.md  pom.xml
bindings/java/src/main/java/org/wickra/genome/: Genome.java  Native.java
bindings/java/src/test/java/org/wickra/genome/: GenomeTest.java  GoldenTest.java
bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
bindings/node/__tests__/: completeness.test.js  genome.test.js  golden.test.js
bindings/node/npm/darwin-arm64/: package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/linux-arm64-gnu/: package.json
bindings/node/npm/linux-x64-gnu/: package.json
bindings/node/npm/win32-arm64-msvc/: package.json
bindings/node/npm/win32-x64-msvc/: package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/wickra_genome/: __init__.py  __init__.pyi  _wickra_genome.pyd
bindings/python/src/: lib.rs
bindings/python/tests/: test_completeness.py  test_golden.py  test_smoke.py
bindings/r/: DESCRIPTION  NAMESPACE  README.md
bindings/r/R/: genome.R
bindings/r/src/: Makevars  Makevars.win  wickra_genome.c
bindings/r/tests/: run_tests.R
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/src/: lib.rs
bindings/wasm/tests/: golden.test.js
crates/genome-bench/: Cargo.toml
crates/genome-bench/benches/: genome.rs
crates/genome-bench/src/: lib.rs
crates/genome-cli/: Cargo.toml
crates/genome-cli/src/: args.rs  main.rs  run.rs
crates/genome-core/: Cargo.toml
crates/genome-core/src/: cluster.rs  config.rs  error.rs  feature.rs  genome.rs  indicator_set.rs  lib.rs  metric.rs  normalize.rs  prng.rs  query.rs  spec.rs  symbol_state.rs  types.rs  universe.rs
crates/genome-core/tests/: conformance.rs  golden.rs  proptest_invariants.rs  streaming_eq_batch.rs
docs/: ARCHITECTURE.md  CLUSTERING.md  Cookbook.md  FEATURES.md  METRICS.md  NORMALIZATION.md  STREAMING.md
examples/: README.md
examples/c/: CMakeLists.txt  genome.c  genome.cpp
examples/csharp/Genome/: Genome.csproj  Program.cs
examples/data/specs/: dna.json
examples/data/universe/: AAA.csv  BBB.csv  CCC.csv  DDD.csv
examples/go/: genome.go  go.mod
examples/java/: pom.xml
examples/java/src/main/java/org/wickra/genome/examples/: Genome.java
examples/node/: genome.js  package.json
examples/python/: genome.py
examples/r/: genome.R
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: command_json.rs  kmeans.rs  spec_parse.rs  vector_build.rs
golden/: README.md
golden/data/: AAA.csv  BBB.csv  CCC.csv  DDD.csv  EEE.csv  FFF.csv
golden/expected/anomaly/: cluster5.json  cosine_dna.json  dna.json  minmax_dna.json
golden/expected/cluster/: anomaly.json  cluster5.json  cosine_dna.json  dna.json  minmax_dna.json
golden/expected/similar/: cluster5.json  cosine_dna.json  dna.json  minmax_dna.json
golden/expected/vector/: anomaly.json  cluster5.json  cosine_dna.json
golden/specs/: anomaly.json  cluster5.json  cosine_dna.json  dna.json  minmax_dna.json
