[workspace]
resolver = "2"
members = [
    "crates/genome-core",
    "crates/genome-cli",
    "crates/genome-bench",
    "bindings/python",
    "bindings/node",
    "bindings/wasm",
    "bindings/c",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wickra-lib/wickra-genome"
authors = ["wickra-lib"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
rust_decimal = "1"
thiserror = "2"
rayon = "1"
clap = { version = "4", features = ["derive"] }
# The 514 O(1) streaming indicators that build every asset's feature vector, and
# the Candle type / CSV reader.
wickra-core = "0.9"
wickra-data = "0.9"
# The name -> indicator resolver (the only such factory in the ecosystem); it
# pulls in wickra-core transitively and provides the serde `Candle`. Git pin so
# cargo-deny's wildcard ban does not fire.
wickra-backtest-core = { git = "https://github.com/wickra-lib/wickra-backtest", version = "0.1" }
# A live market feed for the cross-section query; used behind the `live` feature.
# Git dependency (not yet on crates.io) carries a version pin so cargo-deny's
# wildcard ban does not fire.
wickra-exchange = { git = "https://github.com/wickra-lib/wickra-exchange", version = "0.1" }
cbindgen = "0.27"
criterion = "0.8"
proptest = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allowed pedantic lints (same precedent as the wickra core).
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"
similar_names = "allow"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
