[package]
name = "wickra-genome-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The core under test. Default features off so the fuzzers exercise the
# single-threaded path (no rayon).
genome-core = { path = "../crates/genome-core", default-features = false }

# Detach from the parent workspace — cargo-fuzz builds this crate on its own with
# sanitizer flags on a nightly toolchain.
[workspace]

[[bin]]
name = "spec_parse"
path = "fuzz_targets/spec_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "vector_build"
path = "fuzz_targets/vector_build.rs"
test = false
doc = false
bench = false

[[bin]]
name = "kmeans"
path = "fuzz_targets/kmeans.rs"
test = false
doc = false
bench = false

[[bin]]
name = "command_json"
path = "fuzz_targets/command_json.rs"
test = false
doc = false
bench = false
