[package]
name = "wickra-genome-wasm"
description = "WebAssembly bindings for wickra-genome — the market vector database in the browser."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

# Modern rustc emits a wasm feature set (bulk-memory, sign-ext, …) that the
# wasm-opt bundled with wasm-pack is too old to validate. The wasm-bindgen output
# is already valid and functional; skip the optional size-only optimizer pass.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# Mirrors [workspace.lints] clippy set, plus the binding-shaped allows: the
# wasm-bindgen surface returns `Result`/owned values that pedantic would flag for
# `# Errors` / `#[must_use]` docs the JS boundary does not need.
[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
# The genome core as a direct path dep (not `workspace = true`) so
# `default-features = false` is honored — cargo silently ignores it on an
# inherited workspace dependency. Default features off means no rayon, so the
# wasm build's serial reductions are byte-identical to the native parallel run —
# the exact cross-language golden check.
genome-core = { path = "../../crates/genome-core", version = "0.1", default-features = false }
wasm-bindgen = "0.2"
