[package]
name = "genome-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Criterion benchmarks for the Wickra Genome vector engine (scaffold)."
publish = false

[dependencies]
genome-core = { path = "../genome-core", version = "0.1" }

[lints]
workspace = true
